--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
@@ -22,7 +22,7 @@ msgstr "<p>Borrador Yellow</p><p>Pendiente de aprobación Orange</p><p>Aprobado 
 
 #: ./genweb/organs/search.pt:294
 msgid "Acces to historic info"
-msgstr ""
+msgstr "Acceder a la información histórica"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:328
 msgid "Accio"
@@ -183,7 +183,7 @@ msgstr "Se ha cambiado el estado del acuerdo"
 
 #: ./genweb/organs/browser/views.py:517
 msgid "Changed acord intern state color"
-msgstr "Se ha cambiado el estado del acuerdo a segundo nivel"
+msgstr "Se ha cambiado el estado del acuerdo"
 
 #: ./genweb/organs/browser/views.py:486
 msgid "Changed punt color state"
@@ -199,7 +199,7 @@ msgstr "Se ha propiciado el cambio de estado del acuerdo por un cambio recursivo
 
 #: ./genweb/organs/browser/views.py:482
 msgid "Changed recursive color state of subpunt inside punt"
-msgstr "Se ha propiciado el cambioi de estado del punto por un cambio recursivo"
+msgstr "Se ha cambiado el estado del punto informativo"
 
 #: ./genweb/organs/browser/views.py:515
 msgid "Changed subpunt intern state color"
@@ -963,7 +963,7 @@ msgstr "Título"
 
 #: ./genweb/organs/configure.zcml:44
 msgid "UPC Organs de Govern (genweb.organs)"
-msgstr ""
+msgstr "UPC Organs de Govern (genweb.organs)"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:429
 msgid "Veure com... <span class=\"caret\"></span>"
@@ -1037,7 +1037,7 @@ msgstr "Envia resumen de la sesión"
 #. Default: "Select All/None"
 #: ./genweb/organs/search.pt:154
 msgid "label_toggle"
-msgstr ""
+msgstr "Marca/desmarca todos"
 
 #: ./genweb/organs/content/organgovern.py:111
 #: ./genweb/organs/content/sessio.py:69
