--- a/genweb/organs/locales/en/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/en/LC_MESSAGES/genweb.organs.po
@@ -1127,7 +1127,7 @@ msgstr "Restricted to members"
 #: ./genweb/organs/content/impersonate_as.py:143
 #: ./genweb/organs/content/punt.py:148
 msgid "sense numeracio"
-msgstr "not numbered"
+msgstr "Not numbered"
 
 #. Default: "Last session"
 #: ./genweb/organs/search.pt:255
