--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2018-07-10 10:50+0000\n"
+"POT-Creation-Date: 2018-07-11 13:13+0000\n"
 "PO-Revision-Date: 2017-04-20 14:05+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -20,9 +20,9 @@ msgstr ""
 msgid "<p>Esborrany Yellow</p><p>Pendent d'aprovació Orange</p><p>Aprovat Green</p><p>No aprovat Red</p><p>Derogat DarkRed</p><p>Informatiu LightSkyBlue</p><p>Informat MediumBlue</p>"
 msgstr "<p>Esborrany Yellow</p><p>Pendent d'aprovació Orange</p><p>Aprovat Green</p><p>No aprovat Red</p><p>Derogat DarkRed</p><p>Informatiu LightSkyBlue</p><p>Informat MediumBle</p>"
 
-#: ./genweb/organs/search.pt:465
-msgid "Accedir als darrers acords de:"
-msgstr "Accedir als darrers acords de:"
+#: ./genweb/organs/search.pt:456
+msgid "Accedir als darrers acords de"
+msgstr "Accedir als darrers acords de"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:341
 msgid "Accio"
@@ -176,6 +176,10 @@ msgstr "Cancel·la"
 #: ./genweb/organs/search.pt:133
 msgid "Cerca"
 msgstr "Cerca"
+
+#: ./genweb/organs/browser/viewlets_templates/header.pt:57
+msgid "Cercador"
+msgstr "Cercador"
 
 #: ./genweb/organs/search.pt:121
 msgid "Cercar..."
@@ -420,6 +424,10 @@ msgstr "Assumpte"
 #: ./genweb/organs/content/organgovern.py:104
 msgid "From mail"
 msgstr "Adreça de qui envia els missatges"
+
+#: ./genweb/organs/search.pt:295
+msgid "Go to historic documentation"
+msgstr "Accés a la documentació anterior"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:165
 msgid "Historial"
@@ -1061,11 +1069,11 @@ msgstr "[Acord sense numeració]"
 msgid "acord"
 msgstr "Acord"
 
-#: ./genweb/organs/search.py:416
+#: ./genweb/organs/search.py:425
 msgid "alphabetically"
 msgstr "alfabèticament"
 
-#: ./genweb/organs/search.py:413
+#: ./genweb/organs/search.py:422
 msgid "date (newest first)"
 msgstr "data (més recent primer)"
 
