--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2018-07-10 10:50+0000\n"
+"POT-Creation-Date: 2018-07-11 13:13+0000\n"
 "PO-Revision-Date: 2017-04-20 14:05+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -20,9 +20,9 @@ msgstr ""
 msgid "<p>Esborrany Yellow</p><p>Pendent d'aprovació Orange</p><p>Aprovat Green</p><p>No aprovat Red</p><p>Derogat DarkRed</p><p>Informatiu LightSkyBlue</p><p>Informat MediumBlue</p>"
 msgstr "<p>Borrador Yellow</p><p>Pendiente de aprobación Orange</p><p>Aprobado Green</p><p>No aprobado Red</p><p>Derogado DarkRed</p><p>Informativo LightSkyBlue</p><p>Informado MediumBlue</p>"
 
-#: ./genweb/organs/search.pt:465
-msgid "Accedir als darrers acords de:"
-msgstr "Acceder a los últimos acuerdos de:"
+#: ./genweb/organs/search.pt:456
+msgid "Accedir als darrers acords de"
+msgstr "Acceder a los últimos acuerdos de"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:341
 msgid "Accio"
@@ -177,6 +177,10 @@ msgstr "Cancela"
 msgid "Cerca"
 msgstr "Busca"
 
+#: ./genweb/organs/browser/viewlets_templates/header.pt:57
+msgid "Cercador"
+msgstr "Buscador"
+
 #: ./genweb/organs/search.pt:121
 msgid "Cercar..."
 msgstr "Buscar..."
@@ -252,19 +256,19 @@ msgstr "Convocatoria"
 
 #: ./genweb/organs/hooks.py:22
 msgid "Created acord"
-msgstr "Se ha creado un acuerdo."
+msgstr "Se ha creado un acuerdo"
 
 #: ./genweb/organs/hooks.py:28
 msgid "Created acta"
-msgstr "Se ha creado una acta."
+msgstr "Se ha creado una acta"
 
 #: ./genweb/organs/hooks.py:34
 msgid "Created punt"
-msgstr "Se ha creado un punto."
+msgstr "Se ha creado un punto"
 
 #: ./genweb/organs/hooks.py:40
 msgid "Created subpunt"
-msgstr ""
+msgstr "Se ha creado un punto"
 
 #: ./genweb/organs/content/templates/acta_view.pt:64
 #: ./genweb/organs/content/templates/impersonate_as.pt:36
@@ -285,23 +289,23 @@ msgstr "ATENCIÓN: Contienido visible por público y afectados (dependiendo del 
 
 #: ./genweb/organs/browser/events/removeObject.py:53
 msgid "Deleted acord"
-msgstr ""
+msgstr "Se ha borrado un acuerdo"
 
 #: ./genweb/organs/hooks.py:55
 msgid "Deleted acta"
-msgstr ""
+msgstr "Se ha borrado un acta"
 
 #: ./genweb/organs/browser/events/removeObject.py:58
 msgid "Deleted punt"
-msgstr ""
+msgstr "Se ha borrado un punto"
 
 #: ./genweb/organs/browser/events/removeObject.py:77
 msgid "Deleted subpunt"
-msgstr ""
+msgstr "Se ha borrado un punto"
 
 #: ./genweb/organs/browser/views.py:113
 msgid "Deleted via javascript"
-msgstr ""
+msgstr "Borrado elemento via javascript"
 
 #: ./genweb/organs/browser/views/acta_preview.pt:77
 #: ./genweb/organs/browser/views/acta_print.pt:90
@@ -420,6 +424,10 @@ msgstr "Asunto"
 #: ./genweb/organs/content/organgovern.py:104
 msgid "From mail"
 msgstr "Dirección de la persona que envía los mensajes"
+
+#: ./genweb/organs/search.pt:295
+msgid "Go to historic documentation"
+msgstr "Acceder a la documentación anterior"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:165
 msgid "Historial"
@@ -558,11 +566,11 @@ msgstr "No asistentes"
 
 #: ./genweb/organs/hooks.py:77
 msgid "Modified acord"
-msgstr "Se ha modificado un acuerdo."
+msgstr "Se ha modificado un acuerdo"
 
 #: ./genweb/organs/hooks.py:83
 msgid "Modified acta"
-msgstr "Se ha modificado una acta."
+msgstr "Se ha modificado una acta"
 
 #: ./genweb/organs/search.pt:233
 msgid "Modified dates"
@@ -570,11 +578,11 @@ msgstr "Fechas"
 
 #: ./genweb/organs/hooks.py:90
 msgid "Modified punt"
-msgstr "Se ha modificado un punto."
+msgstr "Se ha modificado un punto"
 
 #: ./genweb/organs/hooks.py:97
 msgid "Modified subpunt"
-msgstr ""
+msgstr "Se ha modificaco un punto"
 
 #: ./genweb/organs/browser/views.py:228
 msgid "Moved subpunt by drag&drop"
@@ -1061,11 +1069,11 @@ msgstr "[Acuerdo sin numerar]"
 msgid "acord"
 msgstr "Acuerdo"
 
-#: ./genweb/organs/search.py:416
+#: ./genweb/organs/search.py:425
 msgid "alphabetically"
 msgstr "alfabéticamente"
 
-#: ./genweb/organs/search.py:413
+#: ./genweb/organs/search.py:422
 msgid "date (newest first)"
 msgstr "fecha (més reciente primero)"
 
