--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -427,7 +427,7 @@ msgstr "Adreça de qui envia els missatges"
 
 #: ./genweb/organs/search.pt:238
 msgid "Go to historic documentation"
-msgstr "Accés a la documentació anterior"
+msgstr "Accés a la documentació pública històrica"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:165
 msgid "Historial"
