--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
@@ -427,7 +427,7 @@ msgstr "Dirección de la persona que envía los mensajes"
 
 #: ./genweb/organs/search.pt:238
 msgid "Go to historic documentation"
-msgstr "Acceder a la documentación anterior"
+msgstr "Acceso a la documentación pública histórica"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:165
 msgid "Historial"
