Quitar opciones buscador + quitar Sobre Govern UPC

--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
@@ -68,3 +68,6 @@ msgstr "Restringit a membres"
 
 msgid "restricted_to_affected_organ"
 msgstr "Restringit a afectats"
+
+msgid "time_ever"
+msgstr "Qualsevol data"
