--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.po
@@ -69,3 +69,5 @@ msgstr "Restringido a miembros"
 msgid "restricted_to_affected_organ"
 msgstr "Restringido a afectados"
 
+msgid "time_ever"
+msgstr "Cualquier fecha"
