--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -272,7 +272,7 @@ msgstr "Cliqueu <a href=\"./\">aquí</a> per tornar al mode de visualització pe
 #: ./genweb/organs/content/acord.py:70
 #: ./genweb/organs/content/templates/sessio_view.pt:727
 msgid "Close"
-msgstr "Tancada"
+msgstr "Tancar votació"
 
 #: ./genweb/organs/content/organgovern.py:132
 msgid "Color del esdeveniments"
@@ -977,7 +977,7 @@ msgstr ""
 #: ./genweb/organs/content/acord.py:74
 #: ./genweb/organs/content/templates/sessio_view.pt:713
 msgid "Public"
-msgstr "A mà alçada"
+msgstr "Iniciar votació"
 
 #: ./genweb/organs/content/file.py:54
 #: ./genweb/organs/content/propostapunt.py:43
