--- a/genweb/organs/locales/en/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/en/LC_MESSAGES/genweb.organs.po
@@ -480,7 +480,7 @@ msgstr "Used color to show the sessions and the events, in the calendar portlet.
 
 #: ./genweb/organs/content/templates/sessio_view.pt:154
 msgid "Excusa l'assistencia"
-msgstr ""
+msgstr "Excuse assistance"
 
 #: ./genweb/organs/content/templates/excusarassist_view.pt:18
 msgid "Excusar la assistencia a la sessio"
@@ -1326,9 +1326,13 @@ msgstr "date (newest first)"
 msgid "description_no_items_in_folder"
 msgstr "No Organ of government in this folder."
 
-#: ./genweb/organs/content/templates/sessio_view.pt:154
+#: ./genweb/organs/content/templates/sessio_view.pt:160
 msgid "envia_missatge"
 msgstr "Send message"
+
+#: ./genweb/organs/content/templates/sessio_view.pt:154
+msgid "excusa_assistencia"
+msgstr "Excuse assistance"
 
 #: ./genweb/organs/content/organgovern.py:162
 msgid "footerMail"
