--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
@@ -480,7 +480,7 @@ msgstr "Color que se utiliza para mostrar las sesiones de este órgano de gobier
 
 #: ./genweb/organs/content/templates/sessio_view.pt:154
 msgid "Excusa l'assistencia"
-msgstr ""
+msgstr "Excusa la asistencia"
 
 #: ./genweb/organs/content/templates/excusarassist_view.pt:18
 msgid "Excusar la assistencia a la sessio"
@@ -1326,9 +1326,13 @@ msgstr "fecha (més reciente primero)"
 msgid "description_no_items_in_folder"
 msgstr "No hay ningún órgano de gobierno en esta unidad."
 
-#: ./genweb/organs/content/templates/sessio_view.pt:154
+#: ./genweb/organs/content/templates/sessio_view.pt:160
 msgid "envia_missatge"
 msgstr "Mensaje a los miembros"
+
+#: ./genweb/organs/content/templates/sessio_view.pt:154
+msgid "excusa_assistencia"
+msgstr "Excusa la asistencia"
 
 #: ./genweb/organs/content/organgovern.py:162
 msgid "footerMail"
